# Autonomous-Farm-Robot

./: .gitignore  AutonomusDriveAction.py  Documents  GPS_data_conversion.py  README.md  README_BACKUP_1064.md  README_LOCAL_1064.md  package.xml
Agribot_model/: readme
Agribot_model/solidwork_files/: Assem2.SLDASM  Part4.SLDPRT  read_me  wheel.1.SLDPRT
CROP-WEED-CALSSIFICATION/: model.py
Crop_Weed_ Classification/: main.py  model.py  pre-process.py  predict.py  real-time.py  utils.py
Datasets(Git)/BoniRob dataset/: Dataset Analysis
Documents/: Abstract1  readme
agribot/: CMakeLists.txt
agribot_control/: CMakeLists.txt  package.xml
agribot_control/config/: agribot_control.yaml
agribot_description/: CMakeLists.txt
agribot_description/config/: joint_names_agribot.yaml
agribot_description/launch/: agribot_description.launch  agribot_gazebo_simulation.launch  my_world.launch
agribot_description/maps/: farm.yaml
agribot_description/meshes/: wheel_1.STL  wheel_2.STL  wheel_3.STL
agribot_description/rviz/: agribot_urdf.rviz
agribot_description/urdf/: agribot_body.urdf.xacro  agribot_materials.urdf.xacro  agribot_parts.urdf.xacro  agribot_sensors.urdf.xacro  testingFile.urdf
agribot_description/world/: Farm.world  farm.world  world1.world
agribot_ws/: .rosinstall.bak
agribot_ws/src/: frames.gv  initialize_origin.py
agribot_ws/src/agribot_description/: AGRIBOT.gv
agribot_ws/src/for_report/: .~lock.report.odt#  report.odt
agribot_ws/src/gps_umd/: .travis.yml  README.md
agribot_ws/src/gps_umd/gps_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
agribot_ws/src/gps_umd/gps_common/include/gps_common/: conversions.h
agribot_ws/src/gps_umd/gps_common/launch/: fix_translator.launch
agribot_ws/src/gps_umd/gps_common/msg/: GPSFix.msg  GPSStatus.msg
agribot_ws/src/gps_umd/gps_common/src/: utm_odometry_node.cpp  utm_odometry_to_navsatfix_node.cpp
agribot_ws/src/gps_umd/gps_common/src/gps_common/: gps_message_converter.py
agribot_ws/src/gps_umd/gps_umd/: CHANGELOG.rst  package.xml
agribot_ws/src/gps_umd/gpsd_client/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
agribot_ws/src/gps_umd/gpsd_client/src/: client.cpp  gps_dumper.cpp
agribot_ws/src/marti_messages/: .gitignore  README.md
agribot_ws/src/marti_messages/marti_can_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
agribot_ws/src/marti_messages/marti_can_msgs/msg/: CanFrame.msg
agribot_ws/src/marti_messages/marti_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
agribot_ws/src/marti_messages/marti_common_msgs/msg/: BoolStamped.msg  ByteArrayStamped.msg  DurationStamped.msg  Float32Stamped.msg  Float64Stamped.msg  HealthStatus.msg  Int16Stamped.msg  Int32Stamped.msg  Int64Stamped.msg  Int8Stamped.msg  KeyValue.msg  KeyValueArray.msg  Matrix3x3Stamped.msg  ServiceHeader.msg  StringArrayStamped.msg  StringStamped.msg  TimeStamped.msg  UInt16Stamped.msg  UInt32Stamped.msg  UInt64Stamped.msg  UInt8Stamped.msg
agribot_ws/src/marti_messages/marti_nav_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
agribot_ws/src/marti_messages/marti_nav_msgs/msg/: Command.msg  GridMap.msg  LeadVehicle.msg  Obstacle.msg  ObstacleArray.msg  PathPlanning.msg  Route.msg  RouteArray.msg  RouteOffset.msg  RoutePoint.msg  RoutePosition.msg  RouteSpeed.msg  RouteSpeedArray.msg  TeleopState.msg  TrackedObject.msg  TrackedObjectArray.msg  VehicleControl.msg  Wgs84Sample.msg
agribot_ws/src/marti_messages/marti_nav_msgs/srv/: DeleteRoute.srv  GetRoute.srv  GetRouteList.srv  PlanRoute.srv  SaveRecordedRoute.srv  SaveRoute.srv  SetRoute.srv  UpdateRouteMetadata.srv
agribot_ws/src/marti_messages/marti_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
agribot_ws/src/marti_messages/marti_perception_msgs/msg/: PedestrianImageID.msg
agribot_ws/src/marti_messages/marti_sensor_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
agribot_ws/src/marti_messages/marti_sensor_msgs/msg/: Altitude.msg  DifferentialMeasurement.msg  DioPortState.msg  DioRealTimeData.msg  Direction.msg  Exposure.msg  Gyro.msg  Velocity.msg  WheelEncoder.msg  WheelEncoderSet.msg
agribot_ws/src/marti_messages/marti_sensor_msgs/srv/: SetExposure.srv
agribot_ws/src/marti_messages/marti_visualization_msgs/: CHANGELOG.rst  CMakeLists.txt
agribot_ws/src/marti_messages/marti_visualization_msgs/msg/: TexturedMarker.msg  TexturedMarkerArray.msg
agribot_ws/src/result/: data.bag
agribot_ws/src/solidwork_files/: Part6.SLDPRT  abc1.SLDPRT
autonomous_drive/: CMakeLists.txt  GPS_data_conversion.py  autonomus_drive.py  data_manipulation.py
bag_files/: data1.bag
devel/: .catkin  .gitignore  .rosinstall  _setup_util.py  setup.sh
devel/include/gps_common/: GPSFix.h  GPSStatus.h
devel/include/mapviz/: AddMapvizDisplay.h  AddMapvizDisplayRequest.h  AddMapvizDisplayResponse.h
devel/include/marti_can_msgs/: CanFrame.h
devel/include/marti_common_msgs/: BoolStamped.h  ByteArrayStamped.h  DurationStamped.h  Float32Stamped.h  Float64Stamped.h  HealthStatus.h  Int16Stamped.h  Int32Stamped.h  Int64Stamped.h  Int8Stamped.h  KeyValue.h  KeyValueArray.h  Matrix3x3Stamped.h  ServiceHeader.h  StringArrayStamped.h  StringStamped.h  TimeStamped.h  UInt16Stamped.h  UInt32Stamped.h  UInt64Stamped.h  UInt8Stamped.h
devel/include/marti_nav_msgs/: Command.h  DeleteRoute.h  DeleteRouteRequest.h  DeleteRouteResponse.h  GetRoute.h  GetRouteList.h  GetRouteListRequest.h  GetRouteListResponse.h  GetRouteRequest.h  GetRouteResponse.h  GridMap.h  LeadVehicle.h  Obstacle.h  ObstacleArray.h  PathPlanning.h  PlanRoute.h  PlanRouteRequest.h  PlanRouteResponse.h  Route.h  RouteArray.h  RouteOffset.h  RoutePoint.h  RoutePosition.h  RouteSpeed.h  RouteSpeedArray.h  SaveRecordedRoute.h  SaveRecordedRouteRequest.h  SaveRecordedRouteResponse.h  SaveRoute.h  SaveRouteRequest.h  SaveRouteResponse.h  (+11 more)
sensor-fusion/: read.md
src/imudata/: imudata.ino
src/result/: frames.gv
src/solidwork_files/: COVER PLATE.SLDPRT  Part3.SLDPRT  final.SLDASM  motor.SLDPRT  xyz.SLDPRT
(+494 files in other folders)
