<?xml version="1.0"?>
<package>
  <name>gpsd_client</name>
  <version>0.3.0</version>
  <description>connects to a GPSd server and broadcasts GPS fixes 
   using the NavSatFix message</description>

  <maintainer email="timo.roehling@fkie.fraunhofer.de">Timo Roehling</maintainer>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <author email="ken@tossell.net">Ken Tossell</author>
  <author email="rob@umd.edu">Rob Thomson</author>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gpsd_client</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gps_common</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>libgps</build_depend>

</package>
