<package format="2">
  <name>marti_can_msgs</name>
  <version>0.8.0</version>
  <description>

     marti_can_msgs

  </description>
  <author>Elliot Johnson</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_messages</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>


